--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,156 @@
 body {
     padding-top: 5rem;
 }
+
+
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	background-color: #FFFFFFF;
+	font-family: Montserrat, sans-serif;
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
+	min-height: 100vh;
+	margin: 0;
+}
+
+h3 {
+	margin: 10px 0;
+}
+
+h6 {
+	margin: 5px 0;
+	text-transform: lowercase;
+}
+
+.skills p {
+	display: block;
+	margin: 0 auto;
+	font-family: 'Nanum Myeongjo', serif;
+	line-height: 21px;
+	color: #000000;
+    padding: 20px;
+}
+
+.card-container {
+	border-radius: 25px;
+	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
+	color: #FFFFFF;
+	padding-top: 30px;
+	position: relative;
+	width: 350px;
+	max-width: 100%;
+	text-align: center;
+}
+
+.card-container .profile{
+	background-color: #007ea7;
+
+}
+
+.card-container .pro {
+	color: #231E39;
+	
+	border-radius: 3px;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 3px 7px;
+	position: absolute;
+	top: 30px;
+	left: 30px;
+}
+
+.card-container .round {
+	width: 200px;
+  height: 200px;
+	border-radius: 50%;
+	padding: 7px;
+}
+
+button.primary {
+	background-color: #03BFCB;
+	border: 1px solid #03BFCB;
+	border-radius: 3px;
+	color: #231E39;
+	font-family: Montserrat, sans-serif;
+	font-weight: 500;
+	padding: 10px 25px;
+}
+
+
+.skills {
+	justify-content: center;
+	background-color: #ccdbdc;
+	border-radius: 0 0 25px 25px;
+	padding: 15px;
+	margin-top: 30px;
+}
+
+.skills .text {
+	display: flex;
+	justify-content: center;
+	flex-direction: column ;
+}
+	
+.skills button {
+	background: #17aa56;
+	color : #fff;
+ 	border-radius: 7px;
+	box-shadow: 0 5px #119e4d;
+
+	
+	border: none;
+	font-family: inherit;
+	font-size: inherit;
+	
+	cursor: pointer;
+	padding: 25px 80px;
+	display: inline-block;
+	margin: 15px 30px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+	outline: none;
+	position: relative;
+	transition: all 0.3s;
+}
+
+.tags {
+	display: flex;
+	justify-content: center;
+	flex-direction: row ;
+	
+}
+.tags > div {
+  /*
+    1/3  - 3 columns per row
+    10px - spacing between columns 
+  */
+  	font-family: inherit;
+  display:flex;
+  flex-direction: column;
+  color: black;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  
+  justify-content: center;
+  align-items: center;
+  width: calc(1/3*100% - (1 - 1/3)*10px);
+}
+.tags > div  > div{
+  /*
+    1/3  - 3 columns per row
+    10px - spacing between columns 
+  */
+  font-family: Montserrat, sans-serif;
+  color: black;
+  justify-content: center;
+
+}
